# ThaiLang

./: CMakeLists.txt  ast.c  context.c  eval.c  exec.c  hashtable.c  main.c  object.c  parser.c
include/: ast.h  context.h  eval.h  exec.h  func.h  hashtable.h  lexer.h  object.h  parser.h
